# amberpipeline

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README-CN.md  README-EN.md  README.md  README_CN.md  README_EN.md  config.json  config.py  main.py  package-lock.json  requirements.txt
Compiled/: AssetIDs.h
backend/: __init__.py  config.json  server.py  test_inpainting.py
backend/Processed/: resources_metadata_20251225_043209.json  resources_metadata_20251225_044155.json
backend/modules/: inpainting.py  semantic_segmentation.py
cpp/include/: AssetIDs.h  ResourceManager.h  ResourceTypes.h
cpp/src/: ResourceManager.cpp
cpp/test/: ResourceManagerTest.cpp
cpp/tools/: AssetPacker.cpp  AssetPacker.h  AssetPackerMain.cpp  CMakeLists.txt  ResourceSyncServer.cpp
docx/: Canvas_Function_Modules_Analysis.md  Inpainting功能.md  前端封装建议.md  多画布界面视觉疲劳优化建议.docx  多画布界面视觉疲劳优化建议.md  撤销重做系统.md  画布规划.md  设计文档.md  语义标记 + 工具函数架构示例.md  迭代建议.md  需求文档.md  项目完成度报告.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  typecheck-output.txt  vite.config.ts
frontend/src/: index.ts
frontend/src/app/: App.tsx  TestApp.tsx  main.tsx  routes.tsx
frontend/src/components/: ThemedComponentTemplate.tsx  (+1 more)
gui/: main_window.py  styles.qss
gui/components/: editor_tab.py  export_tab.py  monitor_tab.py
modules/: code_sync.py  image_processing.py  naming_resolver.py  normal_map.py  segmentation.py  segmentation_sam2.py  semantic_segmentation.py  workflow_manager.py
python_bridge/: amber_pipeline_bridge.py
tools/: generate_asset_ids.py
(+143 files in other folders)
